force-app/main/default/objects/RE_Pricing_Input__c/RE_Pricing_Input__c.object-meta.xml
<CustomObject>
    <label>RE Pricing Input</label>
    <nameField>
        <displayFormat>RPI-{000000000}</displayFormat>
        <label>RE PRICING INPUT Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RE Pricing Input</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>