force-app/main/default/objects/RE_Pricing_Input__c/fields/RE_CurrentCnfgTierAmnt__c.field-meta.xml
<CustomField>
    <fullName>RE_CurrentCnfgTierAmnt__c</fullName>
    <label>CurrentCnfgTierAmnt</label>
    <length>15</length>
    <type>Text</type>
</CustomField>