force-app/main/default/objects/RE_Pricing_Input__c/fields/RE_FixedPrice__c.field-meta.xml
<CustomField>
    <fullName>RE_FixedPrice__c</fullName>
    <label>FixedPrice</label>
    <length>20</length>
    <type>Text</type>
</CustomField>