force-app/main/default/objects/RE_Pricing_Input__c/fields/RE_IsConfig__c.field-meta.xml
<CustomField>
    <fullName>RE_IsConfig__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsConfig</label>
    <type>Checkbox</type>
</CustomField>