force-app/main/default/objects/RE_Pricing_Input__c/fields/RE_IsDifferent__c.field-meta.xml
<CustomField>
    <fullName>RE_IsDifferent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsDifferent</label>
    <type>Checkbox</type>
</CustomField>