force-app/main/default/objects/RE_Pricing_Input__c/fields/RE_PlantDesc__c.field-meta.xml
<CustomField>
    <fullName>RE_PlantDesc__c</fullName>
    <description>Plant description will be present in this field</description>
    <label>PlantDesc</label>
    <type>TextArea</type>
</CustomField>