force-app/main/default/objects/RE_Pricing_Input__c/fields/RE_ShipTo__c.field-meta.xml
<CustomField>
    <fullName>RE_ShipTo__c</fullName>
    <label>ShipTo</label>
    <length>20</length>
    <type>Text</type>
</CustomField>