force-app/main/default/objects/RE_Pricing_Input__c/fields/RE_TierAmnt__c.field-meta.xml
<CustomField>
    <fullName>RE_TierAmnt__c</fullName>
    <label>TierAmnt</label>
    <length>15</length>
    <type>Text</type>
</CustomField>