force-app/main/default/objects/RE_Pricing_Input__c/fields/RE_Type__c.field-meta.xml
<CustomField>
    <fullName>RE_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GPC</fullName>
            </value>
            <value>
                <fullName>RPG</fullName>
            </value>
            <value>
                <fullName>Tier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>