force-app/main/default/objects/RE_Pricing_Input__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RE_IsConfig__c</columns>
    <columns>RE_Material__c</columns>
    <columns>RE_Start_Date__c</columns>
    <columns>RE_End_Date__c</columns>
    <columns>RE_Type__c</columns>
    <columns>RE_GPCAmnt__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>RE_Is_latest__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RE_Type__c</field>
        <operation>equals</operation>
        <value>GPC</value>
    </filters>
    <label>GPC</label>
</ListView>