force-app/main/default/objects/RE_Pricing_Input__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>RE_ShipTo__c</columns>
    <columns>RE_SoldTo__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>RE_GPCAmnt__c</columns>
    <columns>RE_Material__c</columns>
    <columns>RE_TierAmnt__c</columns>
    <columns>RE_Type__c</columns>
    <columns>RE_Start_Date__c</columns>
    <columns>RE_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RE_Type__c</field>
        <operation>equals</operation>
        <value>RPG</value>
    </filters>
    <label>All</label>
</ListView>