force-app/main/default/objects/RE_Pricing_Input__c/listViews/RPG.listView-meta.xml
<ListView>
    <fullName>RPG</fullName>
    <columns>NAME</columns>
    <columns>RE_Plant__c</columns>
    <columns>RE_PlantDesc__c</columns>
    <columns>RE_Material__c</columns>
    <columns>RE_FixedPrice__c</columns>
    <columns>RE_ShipTo__c</columns>
    <columns>RE_SoldTo__c</columns>
    <columns>RE_TierAmnt__c</columns>
    <columns>RE_Start_Date__c</columns>
    <columns>RE_End_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>RE_Is_latest__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RE_Type__c</field>
        <operation>equals</operation>
        <value>RPG</value>
    </filters>
    <filters>
        <field>RE_Material__c</field>
        <operation>equals</operation>
        <value>400008591</value>
    </filters>
    <filters>
        <field>RE_Plant__c</field>
        <operation>equals</operation>
        <value>P029</value>
    </filters>
    <filters>
        <field>RE_PlantDesc__c</field>
        <operation>contains</operation>
        <value>Filoil</value>
    </filters>
    <label>RPG</label>
</ListView>