force-app/main/default/objects/RE_Pricing_Input__c/listViews/Tier.listView-meta.xml
<ListView>
    <fullName>Tier</fullName>
    <columns>NAME</columns>
    <columns>RE_ShipTo__c</columns>
    <columns>RE_SoldTo__c</columns>
    <columns>RE_Material__c</columns>
    <columns>RE_Plant__c</columns>
    <columns>RE_TierAmnt__c</columns>
    <columns>RE_CurrentCnfgTierAmnt__c</columns>
    <columns>RE_IsConfig__c</columns>
    <columns>RE_IsDifferent__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RE_Type__c</field>
        <operation>equals</operation>
        <value>Tier</value>
    </filters>
    <label>Tier</label>
</ListView>